[package]
name = "tomtom"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
structopt = { version = "0.3.26", features = ["color", "doc", "suggestions"] }
toml_edit = { version = "0.19.7", features = ["perf"] }
